fix: update ul items alignment

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ input {
   ul {
     display: flex;
     justify-content: start;
-    align-items: center;
+    align-items: start;
     flex-wrap: wrap;
     padding: 1rem 1.4rem;
     width: 80%;
